Modified readPlugin method
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@4172 5fb7f6ec-07c1-534a-b4ca-9155e429e800